<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="GeneralDeviceInformation" Id="{a0c84f73-02ff-417e-83c9-e98fc418c75d}">
    <Declaration><![CDATA[TYPE GeneralDeviceInformation :
STRUCT
	       DeviceType      : UDINT;
        DeviceName      : STRING;
        HardwareVersion : STRING;
        SoftwareVersion : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>