<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="IdentityCoe" Id="{584af156-93fd-44fd-acc0-2ddff86e5554}">
    <Declaration><![CDATA[TYPE
    IdentityCoe :
    STRUCT
        VendorId : DWORD;
        ProductKey   : DWORD;
        Revision     : DWORD;
        SerialNumber : DWORD;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>