<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ProcessData" Id="{055f3ba0-2369-4b81-a87a-d833894704d1}">
    <Declaration><![CDATA[TYPE
    ProcessData :
    UNION
        ProcessData1   : DWORD;
        stProcessData : stProcessData;
    END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>